2014-02-18  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (open_tail): Fix 2013-12-02 regression:
	seek_to_end_p argument being ignored, with the
	behavior being no initial seek to the end.

	* txr.1: Clarified the behavior of the seek-to-end-p
	option.

2014-02-18  Kaz Kylheku  <kaz@kylheku.com>

	* combi.c (rperm_gen_full): Update ptail with return value
	of list_collect. This is not necessary for correctness, but it spares
	list_collect from having to search for the tail on each call.

2014-02-17  Kaz Kylheku  <kaz@kylheku.com>

	Version 80

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.

	* configure (txr_ver): Bumped.

	* RELNOTES, txr.vim, dep.mk: Updated.

2014-02-17  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (bind_args, op_defvar, op_defun, op_defmacro, op_modplace):
	Fix sybol misspelling.

2014-02-17  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Register gensym function as the gensym
	intrinsic, rather than gensymv.
	Register gensym_counter as *gensym-counter*.

	* lib.c (gensym): Handle missing prefix argument by defaulting
	the prefix to "g".
	(gensymv): Function removed.

	* lib.h (gensymv): Declaration removed.

	* txr.1: Fixed omission: missing documentation for gensym.
	Documented *gensym-counter*.

2014-02-17  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (expand): Bugfix: do not expand any part of the macro
	form via expand_forms. This is completely wrong since only the
	macro knows what material is evaluated and what isn't.

2014-02-16  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (op_tree_case): Removed superfluous handling of
	nil parameter list; this is correctly handled by bind_macro_params.
	Added support for the colon symbol as an indication that
	the case is declined.

	* txr.1: Updated.

2014-02-16  Kaz Kylheku  <kaz@kylheku.com>

	New destructuring operators.

	* eval.c (tree_case_s, tree_bind_s): New symbol variables.
	(bind_macro_params): Bugfix: inappropriate exception thrown when atom