@@ -2952,9 +2952,9 @@ void eval_init(void)
   reg_var(intern(lit("s-ixoth"), user_package), &s_ixoth);
 
   reg_fun(intern(lit("open-directory"), user_package), func_n1(open_directory));
-  reg_fun(intern(lit("open-file"), user_package), func_n2(open_file));
-  reg_fun(intern(lit("open-tail"), user_package), func_n3(open_tail));
-  reg_fun(intern(lit("open-command"), user_package), func_n2(open_command));
+  reg_fun(intern(lit("open-file"), user_package), func_n2o(open_file, 1));
+  reg_fun(intern(lit("open-tail"), user_package), func_n3o(open_tail, 1));
+  reg_fun(intern(lit("open-command"), user_package), func_n2o(open_command, 1));
   reg_fun(intern(lit("open-pipe"), user_package), func_n2(open_command));
   reg_fun(intern(lit("open-process"), user_package), func_n3o(open_process, 2));
   reg_fun(intern(lit("remove-path"), user_package), func_n1(remove_path));
